crates/nrzrepo/tests/snapshots/query__nrz_trace_get_`invalid.ts`_with_dependencies_(npm@10.5.0).snap
---
source: crates/nrzrepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "invalid.ts",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "button.css"
            },
            {
              "path": "button.json"
            },
            {
              "path": "button.tsx"
            }
          ]
        },
        "errors": {
          "items": [
            {
              "import": "import foo from \"./non-existent-file.js\";\nimport { Button } from \"./button.tsx\";\n"
            }
          ]
        }
      }
    }
  }
}
