crates/nrzrepo/tests/snapshots/query__nrz_trace_get_`main.ts`_(npm@10.5.0).snap
---
source: crates/nrzrepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "main.ts"
    }
  }
}
