crates/nrzrepo/tests/snapshots/query__nrz_trace_get_`main.ts`_with_dependencies_(npm@10.5.0).snap
---
source: crates/nrzrepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "main.ts",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "bar.js"
            },
            {
              "path": "button.css"
            },
            {
              "path": "button.json"
            },
            {
              "path": "button.tsx"
            },
            {
              "path": "foo.js"
            }
          ]
        }
      }
    }
  }
}
