crates/nrzrepo/tests/snapshots/query__nrz_trace_get_`main.ts`_with_depth_=_0_(npm@10.5.0).snap
---
source: crates/nrzrepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "main.ts",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "button.tsx"
            },
            {
              "path": "foo.js"
            }
          ]
        }
      }
    }
  }
}
